--- a/jquery-slider/subject.html
+++ b/jquery-slider/subject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>专题</title>
+		<title>全屏专题</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<style type="text/css">
 			html,body{
