--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>dialog</title>
+		<title>对话框-dialog</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">
