--- a/jquery-scrollbar/index.html
+++ b/jquery-scrollbar/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>scrollbar</title>
+		<title>滚动条-scrollbar</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">
