--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>select</title>
+		<title>下拉框-select</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">	
