--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -53,7 +53,7 @@
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
-					<p>$(selector).slider(options,callback(api));</p>
+					<p>$(selector).slider(options);</p>
 				</div>
 				<h2> options参数</h2>
 				<table>
