--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -69,6 +69,16 @@
 							<td>计数的时间间隔（单位：毫秒）</td>
 						</tr>
 						<tr>
+							<td>disableBtnCls</td>
+							<td>disable</td>
+							<td>计数期间的class</td>
+						</tr>
+						<tr>
+							<td>auto</td>
+							<td>true</td>
+							<td>是否默认开启计数</td>
+						</tr>
+						<tr>
 							<td>countEach(timestamp)</td>
 							<td>function(){}</td>
 							<td>每计时单位执行</td>
@@ -92,6 +102,14 @@
 						<tr>
 							<td>reset()</td>
 							<td>重置</td>
+						</tr>
+						<tr>
+							<td>setStarttime()</td>
+							<td>设置开始时间</td>
+						</tr>
+						<tr>
+							<td>setEndtime()</td>
+							<td>设置结束时间</td>
 						</tr>
 					</tbody>
 				</table>
