--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>图片聚焦-imagezoom</title>
+		<link rel="shortcut icon" href="public/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">			
