--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>滑动条-range</title>
-		<link rel="shortcut icon" href="public/img/favicon.png">
+		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">			
