--- a/jquery-slider/subject.html
+++ b/jquery-slider/subject.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>全屏专题</title>
+		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<style type="text/css">
 			html,body{
