--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="mod-content">
 						<ul>
 							<li>
-								<p><a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a><p>
+								<p><a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a><p>
 								<p>$(selector).slider(options,callback(api));</p>
 							</li>
 							<li>
