--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -65,7 +65,7 @@
 							<td>结束时间</td>
 						</tr>
 						<tr>
-							<td>duration</td>
+							<td>interval</td>
 							<td>1000</td>
 							<td>计数的时间间隔（单位：毫秒）</td>
 						</tr>
