--- a/zepto-slider/index.html
+++ b/zepto-slider/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>幻灯片-silder</title>
+		<title>轮播-silder</title>
 		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
