--- a/index.html
+++ b/index.html
@@ -151,12 +151,16 @@
 								<p>$(selector).countdown(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
-								<p>$(selector).accordion(options,callback(api));</p>
-							</li>
-							<li>
 								<p><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
 								<p>$(selector).imagezoom(options);</p>
+							</li>
+							<li>
+								<p><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></p>
+								<p>$(selector).imagezoom(options);</p>
+							</li>							
+							<li>
+								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
+								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
 						</ul>
 					</div>
