--- a/zepto-slider/index.html
+++ b/zepto-slider/index.html
@@ -197,7 +197,8 @@
 						<tr>
 							<td>easing</td>
 							<td>'easeIn'</td>
-							<td>切换时的动画效果,可选的动画函数包括:swing,easeIn,easeOut,expoin,expoout,expoinout,elasin,elasout,elasinout,backin,backout,backinout,bouncein,bounceout,bounceinout</td>
+							<td>切换时的动画效果,可选的动画函数包括:ease、linea、ease-in、ease-out、ease-in-out、cubic-bezier
+							</td>
 						</tr>
 						<tr>
 							<td>touchable</td>
