--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -240,7 +240,7 @@
 			</div>
 			<div class="code">
 				<p>跑马灯效果</p>
-				<p>$(".slider7").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});</p>
+				<p>$(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:3000,delay:0,direction:'y',auto:true,immediately:true});</p>
 			</div>
 			<script type="text/javascript">
 				$(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:3000,delay:0,direction:'y',auto:true,immediately:true});
