updated 参数修改 同意用steps

--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -47,7 +47,7 @@
 	min:0,
 	max:50,
 	value:40,
-	step:5,
+	steps:5,
 	change:function(status){
 		$('#input1').val(status.value);
 	}
@@ -59,7 +59,7 @@
 					min:0,
 					max:50,
 					value:40,
-					step:5,
+					steps:5,
 					change:function(status){
 						$('#input1').val(status.value);
 					}
@@ -76,7 +76,7 @@
 	min:10,
 	max:62,
 	value:40,
-	step:5,
+	steps:5,
 	slide:function(status){
 		$('#input2').val(status.value);
 	}
@@ -88,7 +88,7 @@
 					min:10,
 					max:62,
 					value:40,
-					step:5,
+					steps:5,
 					slide:function(status){
 						$('#input2').val(status.value);
 					}
@@ -135,7 +135,7 @@
 							<td>默认显示的值</td>
 						</tr>
 						<tr>
-							<td>step</td>
+							<td>steps</td>
 							<td>1</td>
 							<td>每次移动的步长</td>
 						</tr>
