--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -100,10 +100,10 @@
 				</div>
 			</div>
 			<div class="code">
-				<p>$(".slider1").slider({inEndEffect:"cycle",step:2,auto:true,duration:300,delay:5000});</p>
+				<p>$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:300,delay:5000});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider1").slider({inEndEffect:"cycle",step:2,auto:true,duration:5000,duration:300,delay:5000});
+				$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:5000,duration:300,delay:5000});
 			</script>
 			<div class="slider style2 slider2">
 				<span class="prev">&lt;</span>
@@ -215,10 +215,10 @@
 			</div>
 			<div class="code">
 				<p>不定大小的帧</p>
-				<p>$(".slider6").slider({hasTriggers:false,duration:1000,step:'auto'});</p>
+				<p>$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider6").slider({hasTriggers:false,duration:1000,step:'auto'});
+				$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});
 			</script>
 			<div class="slider style2 slider7">
 				<div class="container">
@@ -296,7 +296,7 @@
 							<td>当鼠标移至相应区域时获得的class</td>
 						</tr>
 						<tr>
-							<td>step</td>
+							<td>steps</td>
 							<td>1</td>
 							<td>移动帧数,'auto'为自动调整</td>
 						</tr>
@@ -427,7 +427,7 @@
 							<td>设置当前帧</td>
 						</tr>
 						<tr>
-							<td>setSteps(step)</td>
+							<td>setSteps(steps)</td>
 							<td>设置移动帧数</td>
 						</tr>
 						<tr>
