--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -423,6 +423,10 @@
 							<td>停止播放</td>
 						</tr>
 						<tr>
+							<td>resize()</td>
+							<td>重置幻灯片参数</td>
+						</tr>
+						<tr>
 							<td>setIndex(index,isAnimate)</td>
 							<td>设置当前帧</td>
 						</tr>
@@ -443,8 +447,8 @@
 							<td>获取当前帧</td>
 						</tr>
 						<tr>
-							<td>resize()</td>
-							<td>重置幻灯片参数</td>
+							<td>getOptions()</td>
+							<td>获取组件当前参数值</td>
 						</tr>
 					</tbody>
 				</table>
