--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
 							<li>
 								<p><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></p>
 								<p>$(selector).imagezoom(options);</p>
-							</li>							
+							</li>
+							<li>
+								<p><a href="/widget/jquery-calendar/" target="_blank">日历</a></p>
+								<p>$(selector).calendar(options);</p>
+							</li>					
 							<li>
 								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
