--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -22,6 +22,8 @@
 			.calendar caption{
 				line-height: 30px;
 				text-align: center;
+				border-bottom: 1px solid #ebebeb;
+    			margin-bottom: 5px;
 			}
 			.calendar caption span{
 				margin: 0 10px;
@@ -30,7 +32,6 @@
 				color:#666;
 				margin:0 5px;
 				text-decoration: none;
-				font-family: Arial;
 			}
 			.calendar td{
 				height: 30px;
@@ -42,6 +43,9 @@
 			    margin: 0 auto;
 			    line-height: 30px;
 			    cursor: pointer;
+			}
+			.calendar .widget-back{
+				float: right;
 			}
 			.calendar .widget-today span{
 				font-weight: bold;
