--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -33,15 +33,15 @@
 				margin:0 5px;
 				text-decoration: none;
 			}
-			.calendar td{
+			.calendar td,.calendar th{
 				height: 30px;
 				line-height: 30px;
+				text-align: center;
 			}
 			.calendar td span{
 				display: block;
 			    width: 30px;
 			    margin: 0 auto;
-			    line-height: 30px;
 			    cursor: pointer;
 			}
 			.calendar .widget-back{
