--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -64,18 +64,41 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="calendar"></div>
+			<div class="calendar calendar1"></div>
 			<div class="code">
+				<p>今天到明年元旦可选，选择一个区间</p>
 <pre>
-$('.calendar').calendar({select:function(data){
-	alert('你选择了'+data['year']+'-'+data['month']+'-'+data['day']);
-}});
+var year = (new Date()).getFullYear()+1;
+$('.calendar1').calendar({
+	limitRange:[['today',year+'0101']],
+	isRange:true
+});
 </pre>
 			</div>
 			<script type="text/javascript">
-				$('.calendar').calendar({select:function(data){
-					alert('你选择了'+data['year']+'-'+data['month']+'-'+data['day']);
-				}});
+				var year = (new Date()).getFullYear()+1;
+				$('.calendar1').calendar({
+					limitRange:[['today',year+'0101']],
+					isRange:true
+				});
+			</script>
+			<div class="calendar calendar2"></div>
+			<div class="code">
+				<p>选择某一天</p>
+<pre>
+$('.calendar2').calendar({
+	'select':function(range){
+		alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
+	}
+});
+</pre>
+			</div>
+			<script type="text/javascript">
+				$('.calendar2').calendar({
+					'select':function(range){
+						alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
+					}
+				});
 			</script>
 			<div class="example">
 				<div class="call">
@@ -98,14 +121,24 @@ $('.calendar').calendar({select:function(data){
 							<td>生成日历的class前缀</td>
 						</tr>
 						<tr>
+							<td>isRange</td>
+							<td>false</td>
+							<td>是否选择范围</td>
+						</tr>
+						<tr>
+							<td>limitRange</td>
+							<td>[]</td>
+							<td>有效选择区域的范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
+						</tr>
+						<tr>
 							<td>change(day)</td>
 							<td>[空]</td>
 							<td>当前选中月份修改时触发,day为当月第一天,包含月份及年份信息</td>
 						</tr>
 						<tr>
-							<td>select(day)</td>
+							<td>select([start,end])</td>
 							<td>[空]</td>
-							<td>选择日期时触发,day为选择的日期,包含月份及年份信息</td>
+							<td>选择日期时触发,start为开始时间,end为结束时间,包含月份及年份信息</td>
 						</tr>
 					</tbody>
 				</table>
