--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -103,7 +103,7 @@
 				<p>$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:300,delay:5000});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:5000,duration:300,delay:5000});
+				$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:false,duration:5000,duration:300,delay:5000});
 			</script>
 			<div class="slider style2 slider2">
 				<span class="prev">&lt;</span>
@@ -122,7 +122,7 @@
 				<p>$(".slider2").slider({direction:"y",activeIndex:2});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider2").slider({direction:"y",activeIndex:2});
+				// $(".slider2").slider({direction:"y",activeIndex:2});
 			</script>
 			<div class="slider style2 slider3">
 				<div class="container">
@@ -144,7 +144,7 @@
 				<p>$(".slider3").slider({animate:false,triggerType:"click"});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider3").slider({animate:false,triggerType:"click"});
+				// $(".slider3").slider({animate:false,triggerType:"click"});
 			</script>
 			<div class="slider style2 slider4">
 				<span class="prev">&lt;</span>
@@ -164,7 +164,7 @@
 				<p>$(".slider4").slider({easing:"backin",keyboardAble:true,hasTriggers:false,inEndEffect:"none"});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider4").slider({easing:"backin",keyboardAble:true,hasTriggers:false,inEndEffect:"none"});
+				// $(".slider4").slider({easing:"backin",keyboardAble:true,hasTriggers:false,inEndEffect:"none"});
 			</script>
 			<div class="slider style1 slider5">
 				<span class="prev">&lt;</span>
@@ -191,7 +191,7 @@
 				<p>$(".slider5").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider5").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});
+				// $(".slider5").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});
 			</script>
 			<div class="slider style1 slider6">
 				<span class="prev">&lt;</span>
@@ -218,7 +218,7 @@
 				<p>$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});
+				$(".slider6").slider({hasTriggers:false,duration:1000,steps:1});
 			</script>
 			<div class="slider style2 slider7">
 				<div class="container">
@@ -243,7 +243,7 @@
 				<p>$(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:3000,delay:0,direction:'y',auto:true,immediately:true});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:3000,delay:0,direction:'y',auto:true,immediately:true});
+				// $(".slider7").slider({inEndEffect:'cycle',hasTriggers:false,duration:3000,delay:0,direction:'y',auto:true,immediately:true});
 			</script>
 			<div class="example">
 				<div class="call">
