--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -218,7 +218,7 @@
 				<p>$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider6").slider({hasTriggers:false,duration:1000,steps:1});
+				$(".slider6").slider({hasTriggers:false,duration:1000,steps:'auto'});
 			</script>
 			<div class="slider style2 slider7">
 				<div class="container">
