--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
 							<li>
 								<p><a href="/widget/jquery-calendar/" target="_blank">日历</a></p>
 								<p>$(selector).calendar(options);</p>
-							</li>					
+							</li>
+							<li>
+								<p><a href="/widget/jquery-popup/" target="_blank">弹出层</a></p>
+								<p>$(selector).popup(options);</p>
+							</li>			
 							<li>
 								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
