--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
 							<li>
 								<p><a href="/widget/jquery-popup/" target="_blank">弹出层</a></p>
 								<p>$(selector).popup(options);</p>
-							</li>			
+							</li>
+							<li>
+								<p><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></p>
+								<p>$(selector).suggestion(options);</p>
+							</li>
 							<li>
 								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
