--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -185,6 +185,16 @@
 							<td>导航列表的class</td>
 						</tr>
 						<tr>
+							<td>prevBtnCls</td>
+							<td>'prev'</td>
+							<td>向前一步的class</td>
+						</tr>
+						<tr>
+							<td>nextBtnCls</td>
+							<td>'next'</td>
+							<td>向后一步的class</td>
+						</tr>
+						<tr>
 							<td>activeCls</td>
 							<td>'active'</td>
 							<td>导航选中时的class</td>
@@ -208,6 +218,16 @@
 							<td>activeIndex</td>
 							<td>0</td>
 							<td>默认选中导航项的索引</td>
+						</tr>
+						<tr>
+							<td>auto</td>
+							<td>false</td>
+							<td>是否自动播放</td>
+						</tr>
+						<tr>
+							<td>delay</td>
+							<td>3000</td>
+							<td>自动播放时停顿的时间间隔</td>
 						</tr>
 						<tr>
 							<td>beforeEvent</td>
