--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -232,16 +232,16 @@
 						<tr>
 							<td>beforeEvent</td>
 							<td>
-								function(){}
+								[无]
 							</td>
-							<td>切换前执行,返回flase时不移动;传入一个对象,包含：target当前导航项对象,tabs导航列表对象,panels内容列表对象,index当前导航项索引,event事件对象;</td>
+							<td>切换前执行,返回flase时不移动;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
 						</tr>
 						<tr>
 							<td>afterEvent</td>
 							<td>
-								function(){}
+								[无]
 							</td>
-							<td>切换后执行;传入一个对象,包含：target当前导航项对象,tabs导航列表对象,panels内容列表对象,index当前导航项索引,event事件对象;</td>
+							<td>切换后执行;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
 						</tr>
 					</tbody>
 				</table>
