--- a/jquery-headroom/index.html
+++ b/jquery-headroom/index.html
@@ -82,6 +82,11 @@
 							<td>500</td>
 							<td>隐藏展示动画的时间间隔</td>
 						</tr>
+						<tr>
+							<td>autoHide</td>
+							<td>true</td>
+							<td>是否自动隐藏</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
