--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>滑动日历(基于slider)-calendar</title>
+		<title>滑动日历(基于轮播)-calendar</title>
 		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<link rel="stylesheet" type="text/css" href="../public/common.css">
