--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -13,19 +13,19 @@
 			.button{
 				margin-bottom:20px;
 			}
-			.dialog{
+			.dialog .widget-container{
 				position:relative;
 				width:320px;
 				height:200px;
 				background:#fff;
 			}
-			.dialog .md-title{
+			.dialog .widget-title{
 				height:40px;
 				padding-left:8px;
 				background:#cee1ee;
 				line-height:40px;
 			}
-			.dialog .md-close{
+			.dialog .widget-close{
 				position:absolute;
 				top:0;
 				right:0;
@@ -35,19 +35,19 @@
 				text-align:center;
 				cursor:pointer;
 			}
-			.dialog .md-content{
+			.dialog .widget-content{
 				height:100px;
 				padding:10px;
 				line-height:100px;
 				text-align:center;
 			}
-			.dialog .md-buttons{
+			.dialog .widget-buttons{
 				height:40px;
 				padding:0 20px;
 				line-height:40px;
 				text-align:right;
 			}
-			.dialog .md-buttons button{
+			.dialog .widget-buttons button{
 				width:80px;
 				height:22px;
 				border:none;
