--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -94,7 +94,7 @@ $('.calendar1').calendar({
 				<p>选择某一天</p>
 <pre>
 $('.calendar2').calendar({
-	'select':function(range){
+	'onSelect':function(range){
 		alert('你选择了'+range[0]['year']+'-'+range[0]['month']+'-'+range[0]['day']);
 	}
 });
@@ -138,12 +138,12 @@ $('.calendar2').calendar({
 							<td>有效选择区域的范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
 						</tr>
 						<tr>
-							<td>change(day)</td>
+							<td>onChange(day)</td>
 							<td>[空]</td>
 							<td>当前选中月份修改时触发,day为当月第一天,包含月份及年份信息</td>
 						</tr>
 						<tr>
-							<td>select([start,end])</td>
+							<td>onSelect([start,end])</td>
 							<td>[空]</td>
 							<td>选择日期时触发,start为开始时间,end为结束时间,包含月份及年份信息</td>
 						</tr>
