--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 				font-size: 16px;
 			}
 			.mod-list{
+				width: 960px;
+				margin: 0 auto 20px;
 				text-align: center;
 			}
 			.mod-list li{
@@ -71,6 +73,12 @@
 			.mod-list .btn:hover{
 				background-color: #333;
 				color:#fff;
+			}
+			.mod-botton{
+				width: 960px;
+				height: 32px;
+				margin: 0 auto 20px;
+				text-align: center;
 			}
 			.mod-content{
 				width:840px;
@@ -116,6 +124,10 @@
 						<li><a class="btn" href="https://github.com/mumuy/widget/zipball/master" target="_blank">下载 .zip</a></li>
 						<li><a class="btn" href="https://github.com/mumuy/widget/tarball/master" target="_blank">下载 .tar.gz</a></li>
 					</ul>
+				</div>
+				<div class="mod-botton">
+					<a class="github-button" href="https://github.com/mumuy" data-style="mega" data-count-href="/mumuy/followers" data-count-api="/users/mumuy#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @mumuy on GitHub">Follow @mumuy</a>
+					<a class="github-button" href="https://github.com/mumuy/widget" data-style="mega" data-count-href="/mumuy/widget/stargazers" data-count-api="/repos/mumuy/widget#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star mumuy/widget on GitHub">Star</a>
 				</div>
 			</header>
 			<div class="container">
@@ -184,5 +196,6 @@
 				</div>
 			</footer>
 		</div>
+		<script async defer src="https://buttons.github.io/buttons.js"></script>
 	</body>
 </html>
