--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							</li>
 							<li>
 								<p><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></p>
-								<p>$(selector).imagezoom(options);</p>
+								<p>$(selector).headroom(options);</p>
 							</li>
 							<li>
 								<p><a href="/widget/jquery-calendar/" target="_blank">日历</a></p>
