--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -53,6 +53,11 @@
 			.calendar .widget-disabled span{
 				color:#999;
 			}
+			.calendar .widget-highlight span{
+				background: #f7b82e;
+				color:#fff;
+				border-radius: 30px;
+			}
 			.calendar .widget-active span{
 				background: #39c;
 				color:#fff;
@@ -100,6 +105,28 @@ $('.calendar2').calendar({
 					}
 				});
 			</script>
+			<div class="calendar calendar3"></div>
+			<div class="code">
+				<p>指定日期高亮显示，如：当前月份的15和16号</p>
+<pre>
+var today = new Date();
+var year = today.getFullYear();
+var month = today.getMonth()+1;
+var string = year+(month>9?month:'0'+month);
+$('.calendar3').calendar({
+	highlightRange:[[string+'15',string+'16']]
+});
+</pre>
+			</div>
+			<script type="text/javascript">
+				var today = new Date();
+				var year = today.getFullYear();
+				var month = today.getMonth()+1;
+				var string = year+(month>9?month:'0'+month);
+				$('.calendar3').calendar({
+					highlightRange:[[string+'15',string+'16']]
+				});
+			</script>
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
@@ -129,6 +156,11 @@ $('.calendar2').calendar({
 							<td>limitRange</td>
 							<td>[]</td>
 							<td>有效选择区域的范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
+						</tr>
+						<tr>
+							<td>highlightRange</td>
+							<td>[]</td>
+							<td>特殊日期范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
 						</tr>
 						<tr>
 							<td>onChange(day)</td>
