--- a/jquery-calendar/index.html
+++ b/jquery-calendar/index.html
@@ -160,7 +160,7 @@ $('.calendar3').calendar({
 						<tr>
 							<td>highlightRange</td>
 							<td>[]</td>
-							<td>特殊日期范围(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
+							<td>指定日期范围高亮(可以为多区间),如[['20150501','20151001']],'today'表示今天</td>
 						</tr>
 						<tr>
 							<td>onChange(day)</td>
