--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -56,6 +56,11 @@
 			.calendar .widget-disabled span{
 				color:#999;
 			}
+			.calendar .widget-highlight span{
+				background: #f7b82e;
+				color:#fff;
+				border-radius: 30px;
+			}
 			.calendar .widget-active span{
 				background: #39c;
 				color:#fff;
