--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -100,6 +100,9 @@
 				</div>
 			</div>
 			<div class="code">
+				<p>
+					每次走两步，无缝循环
+				</p>
 				<p>$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:300,delay:5000});</p>
 			</div>
 			<script type="text/javascript">
@@ -119,6 +122,9 @@
 				</div>
 			</div>
 			<div class="code">
+				<p>
+					Y轴方向的轮播
+				</p>
 				<p>$(".slider2").slider({direction:"y",activeIndex:2});</p>
 			</div>
 			<script type="text/javascript">
@@ -141,6 +147,9 @@
 				</ul>
 			</div>
 			<div class="code">
+				<p>
+					无动画特效，等效于标签页切换
+				</p>
 				<p>$(".slider3").slider({animate:false,triggerType:"click"});</p>
 			</div>
 			<script type="text/javascript">
