--- a/jquery-countdown/index.html
+++ b/jquery-countdown/index.html
@@ -85,7 +85,7 @@
 							<td>每计时单位执行,其中time包含时间信息：year年、quarter季度、month月、day日、hour小时、minute分钟、second秒、microsecond毫秒、format格式化输出</td>
 						</tr>
 						<tr>
-							<td>endEnd(time)</td>
+							<td>countEnd(time)</td>
 							<td>[时间格式化输出]</td>
 							<td>计时结束后执行,其中time包含时间信息：year年、quarter季度、month月、day日、hour小时、minute分钟、second秒、microsecond毫秒、format格式化输出</td>
 						</tr>
