--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
 								<p>$(selector).suggestion(options);</p>
 							</li>
 							<li>
+								<p><a href="/widget/jquery-citys/" target="_blank">城市三级联动</a></p>
+								<p>$(selector).citys(options);</p>
+							</li>
+							<li>
 								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
