--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
 								<p>$(selector).citys(options);</p>
 							</li>
 							<li>
+								<p><a href="/widget/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
+								<p>$(selector).inputFormat(options,callback(api));</p>
+							</li>
+							<li>
 								<p><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></p>
 								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
