--- a/jquery-inputFormat/index.html
+++ b/jquery-inputFormat/index.html
@@ -62,8 +62,12 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>setValue()</td>
-							<td>设置值并格式化</td>
+							<td>format(value)</td>
+							<td>格式化指定值,返回格式化后结果</td>
+						</tr>
+						<tr>
+							<td>setValue(value)</td>
+							<td>设置输入框值</td>
 						</tr>
 					</tbody>
 				</table>
