--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -126,7 +126,7 @@ $('#demo2').citys({
 						<tr>
 							<td>onChange</td>
 							<td>[无]</td>
-							<td>地区切换时触发,回调函数传入地区数据:direct是否为直辖市,province省级名称,city地级名称,area区级名称</td>
+							<td>地区切换时触发,回调函数传入地区信息:direct是否为直辖市,province省级名称,city地级名称,area区级名称</td>
 						</tr>
 					</tbody>
 				</table>
@@ -141,7 +141,7 @@ $('#demo2').citys({
 					<tbody>
 						<tr>
 							<td>getInfo(data)</td>
-							<td>获取当前选中的地理信息</td>
+							<td>获取当前选中的地区信息:direct是否为直辖市,province省级名称,city地级名称,area区级名称</td>
 						</tr>
 					</tbody>
 				</table>
