--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -72,8 +72,8 @@ $('#demo2').citys({
 				<table>
 					<thead>
 						<tr>
-							<th style="width:150">参数</th>
-							<th style="width:80">默认值</th>
+							<th width="150">参数</th>
+							<th width="120">默认值</th>
 							<th>说明</th>
 						</tr>
 					</thead>
@@ -134,7 +134,7 @@ $('#demo2').citys({
 				<table>
 					<thead>
 						<tr>
-							<th  style="width:200">方法</th>
+							<th width="200">方法</th>
 							<th>说明</th>
 						</tr>
 					</thead>
