--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -60,8 +60,8 @@
 				<table>
 					<thead>
 						<tr>
-							<th style="width:150">参数</th>
-							<th style="width:80">默认值</th>
+							<th width="150">参数</th>
+							<th width="80">默认值</th>
 							<th>说明</th>
 						</tr>
 					</thead>
