--- a/jquery-inputFormat/index.html
+++ b/jquery-inputFormat/index.html
@@ -34,8 +34,8 @@
 				<table>
 					<thead>
 						<tr>
-							<th style="width:150">参数</th>
-							<th style="width:80">默认值</th>
+							<th width="150">参数</th>
+							<th width="80">默认值</th>
 							<th>说明</th>
 						</tr>
 					</thead>
@@ -56,7 +56,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th  style="width:200">方法</th>
+							<th width="200">方法</th>
 							<th>说明</th>
 						</tr>
 					</thead>
