--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -116,7 +116,7 @@ $('#demo2').citys({
 						<tr>
 							<td>required</td>
 							<td>true</td>
-							<td>是否必须选一个</td>
+							<td>是否必须选中(是否自动选择地区)</td>
 						</tr>
 						<tr>
 							<td>nodata</td>
